--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
+# IDE folders
+.vscode/
+
 # Python-generated files
 __pycache__/
 *.py[oc]
 build/
 dist/
 wheels/
+tmp/
 *.egg-info
 
 # Virtual environments
