--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# IDE folders
+# IDE files
 .vscode/
+*.code-workspace
 
 # Python-generated files
 __pycache__/
@@ -7,8 +8,11 @@ __pycache__/
 build/
 dist/
 wheels/
-tmp/
 *.egg-info
 
 # Virtual environments
 .venv
+uv.lock
+.python-version
+
+tmp/
