--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "bsutils"
-version = "0.0.4"
+version = "0.0.4-post1"
 authors = [{ name = "wangzhen0518", email = "wangzhen0518@126.com" }]
 description = "A collection of basic python utilities."
 readme = "README.md"
